<resources>
    <string name="app_name">TakeAwayMessenger</string>
    <string name="orders_label">Orders</string>
    <string name="order_label">Order</string>
    <string name="placeholder_name">Name: </string>
    <string name="placeholder_address">Address: </string>
    <string name="placeholder_deliverytime">Delivery Time: </string>
    <string name="orderpage_placeholder1">Order Details</string>
    <string name="orderpage_placeholder2">Delivery Location</string>
    <string name="orderpage_OrderCompleteButtone">Order Complete</string>
    <string name="first_name">First name</string>
    <string name="user_name">User name</string>
    <string name="password">Password</string>
    <string name="last_name">Last name</string>
    <string name="cancel">Cancel</string>
    <string name="by_creating_an_account_you_agree_to_our_terms_of_service_and_privacy_policy">By creating an account you agree to our Terms of Service and Privacy Policy</string>
    <string name="takeawaylogo">takeawayLogo</string>
    <string name="address">Address</string>
    <string name="order_number">Order number</string>
    <string name="create_account">Create account</string>
    <string name="login">Login</string>
    <string name="forgot_password">Forgot password?</string>
    <string name="title_activity_create_customer">activity_create_customer</string>
    <string name="hint_message">Enter message</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="fill_personal_info">Fill personal Info</string>
</resources>