<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FF8000"
    tools:context=".activities.CreateCourierActivity">


    <EditText
        android:id="@+id/createAccountName"
        android:layout_width="300dp"
        android:layout_height="50dp"
        android:layout_marginBottom="5dp"
        android:background="@drawable/shadow"
        android:elevation="10dp"
        android:hint="@string/first_name"
        android:inputType="text"
        android:padding="15dp"
        app:layout_constraintBottom_toTopOf="@+id/createAccountLastName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        android:autofillHints="@string/first_name" />

    <ImageView
        android:id="@+id/createAccountLogo"
        android:layout_width="250dp"
        android:layout_height="200dp"
        android:layout_marginTop="25dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/takeawaylogo"
        android:contentDescription="@string/takeawaylogo" />

    <EditText
        android:id="@+id/createAccountLastName"
        android:layout_width="300dp"
        android:layout_height="50dp"
        android:background="@drawable/shadow"
        android:elevation="10dp"
        android:hint="@string/last_name"
        android:inputType="text"
        android:padding="15dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:autofillHints="@string/last_name" />

    <Button
        android:id="@+id/createAccountButton"
        android:layout_width="300dp"
        android:layout_height="50dp"
        android:backgroundTint="#1574F5"
        android:onClick="createAccount"
        android:text="@string/create_account"
        android:textColor="#FFFFFF"
        app:layout_constraintBottom_toTopOf="@+id/createAccountCancelButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/createAccountCancelButton"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:backgroundTint="#FFFFFF"
        android:onClick="cancel"
        android:text="@string/cancel"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/fillInfoButton"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="292dp"
        android:backgroundTint="#FFFFFF"
        android:onClick="fillPersonalIfo"
        android:text="@string/fill_personal_info"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="300dp"
        android:layout_height="50dp"
        android:gravity="center"
        android:text="@string/by_creating_an_account_you_agree_to_our_terms_of_service_and_privacy_policy"
        android:textColor="#FFFFFF"
        android:typeface="normal"
        app:layout_constraintBottom_toTopOf="@+id/createAccountButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>
