<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorAccent"
    tools:context=".activities.OrderActivity">

    <ImageView
        android:id="@+id/orderpage_ImageID"
        android:layout_width="276dp"
        android:layout_height="133dp"
        android:layout_marginTop="40dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/subway" />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="281dp"
        android:layout_height="135dp"
        android:layout_marginTop="32dp"
        android:background="#FFFFFF"
        android:elevation="4dp"
        android:gravity="center|center_horizontal"
        android:orientation="vertical"
        android:padding="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/orderpage_ImageID">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/orderpage_placeholder1"
            android:textAllCaps="true"
            android:textColor="@color/textColor"
            android:textStyle="bold" />

        <ListView
            android:id="@+id/orderDetailsList"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />

    </LinearLayout>

    <TextView
        android:id="@+id/textView7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="36dp"
        android:text="@string/orderpage_placeholder2"
        android:textAllCaps="true"
        android:textColor="@color/textColor"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout" />

    <TextView
        android:id="@+id/orderpage_addressID"
        android:layout_width="0dp"
        android:layout_height="15dp"
        android:layout_marginTop="8dp"
        android:gravity="center_horizontal"
        android:textAllCaps="true"
        android:textColor="@color/colorPrimary"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView7" />

    <Button
        android:id="@+id/orderpage_OrderCompleteButton"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="20dp"
        android:backgroundTint="@color/buttonBlue"
        android:elevation="4dp"
        android:text="@string/orderpage_OrderCompleteButtone"
        android:textAllCaps="true"
        android:textColor="@color/white"
        android:textStyle="normal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/orderpage_addressID" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/messageButton"
        android:layout_width="52dp"
        android:layout_height="51dp"
        android:layout_marginBottom="16dp"
        android:backgroundTint="@color/buttonGreen"
        android:clickable="true"
        android:elevation="4dp"
        android:src="@drawable/ic_baseline_message_24"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.925"
        app:layout_constraintStart_toStartOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>